my-app/gateway-myapp.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-app-gateway
  namespace: myapp
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http-port
      protocol: HTTP
    hosts:
    - my-app-gateway.apps-crc.testing
