my-app/virtualservice-my-app-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-app-virtualservice
  namespace: myapp
spec:
  hosts:
  - my-app-gateway.apps-crc.testing
  gateways:
  - myapp/my-app-gateway
  - mesh # applies to all the sidecars in the mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: my-app-svc
        port:
          number: 80
